crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_split_spread_props_with_additional_prop3.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$ } from "@qwik.dev/core";
import { Foo } from "./foo";

export default component$((props) => {
  return <Foo s={Math.random()} {...props} hello {...globalThis.nothing} />;
});

============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);
============================= test.tsx_test_component_XXXXXXXXXXXX.js (ENTRY POINT)==
import { Foo } from "./foo";
import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
export const test_component_XXXXXXXXXXXX = (props) => {
  return /*#__PURE__*/ _jsxSplit(
    Foo,
    {
      s: Math.random(),
      ..._getVarProps(props),
      ..._getConstProps(props),
      hello: true,
      ...globalThis.nothing,
    },
    null,
    null,
    0,
    "u6_0",
  );
};
/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==

[]
