crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_split_spread_props_with_additional_prop5.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$ } from "@qwik.dev/core";

function Hola(props: any) {
  return <div {...props}></div>;
}

export default component$(() => {
  return (
    <Hola>
      <div>1</div>
      <div>2</div>
    </Hola>
  );
});

============================= test.js ==
import { _getVarProps } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_LUXeXe0DQrg = () => import("./test.tsx_test_component_LUXeXe0DQrg");
function Hola(props) {
  return /*#__PURE__*/ _jsxSplit(
    "div",
    {
      ..._getVarProps(props),
    },
    _getConstProps(props),
    null,
    0,
    "u6_0",
  );
}
export default /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"),
);
export { Hola as _auto_Hola };

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;;;;AAEA,SAAS,KAAK,KAAU;IACtB,qBAAO,UAAC;wBAAQ;sBAAA;AAClB;AAEA,6BAAe,6EAOZ"}',
);
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==
import { _auto_Hola as Hola } from "./test";
import { _jsxSorted } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = () => {
  return /*#__PURE__*/ _jsxSorted(
    Hola,
    null,
    null,
    [
      /*#__PURE__*/ _jsxSorted("div", null, null, "1", 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, "2", 3, null),
    ],
    3,
    "u6_1",
  );
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;0CAM0B;IACxB,qBACE,WAAC;sBACC,WAAC,mBAAI;sBACL,WAAC,mBAAI;;AAGX"}',
);
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    137,
    223
  ]
}
*/
== DIAGNOSTICS ==

[]
