crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_transform_component_with_normal_function.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { $, component$, useSignal, Signal } from "@qwik.dev/core";
const Foo = component$(function () {
  const data = useSignal<Signal<any>[]>([]);
  const Inner = component$(function (props) {
    const data = props.data;
    return (
      <div>
        {data.value.map((item) => (
          <p onClick$={() => console.log(item.value.id)}>{item.value.id}</p>
        ))}
      </div>
    );
  });
  return <Inner data={data} />;
});

============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"));

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;cACY"}');
============================= test.tsx_Foo_component_XXXXXXXXXXXX.js (ENTRY POINT)==
import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_Inner_component_XXXXXXXXXXXX");
export const Foo_component_XXXXXXXXXXXX = function () {
  const data = useSignal([]);
  const Inner = /*#__PURE__*/ componentQrl(
    /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Foo_component_Inner_component_XXXXXXXXXXXX"),
  );
  return /*#__PURE__*/ _jsxSorted(
    Inner,
    null,
    {
      data: data,
    },
    null,
    3,
    "u6_2",
  );
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;;;yCACuB;IACrB,MAAM,OAAO,UAAyB,EAAE;IACxC,MAAM,sBAAQ;IAUd,qBAAO,WAAC;QAAM,MAAM;;AACtB"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    91,
    434
  ]
}
*/
============================= test.tsx_Foo_component_Inner_component_XXXXXXXXXXXX.js (ENTRY POINT)==
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const _hf0 = (p0) => p0.value.id;
const _hf0_str = "p0.value.id";
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX");
export const Foo_component_Inner_component_XXXXXXXXXXXX = function (props) {
  const data = props.data;
  const Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX = /*#__PURE__*/ qrl(
    i_XXXXXXXXXXXX,
    "Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX",
  );
  return /*#__PURE__*/ _jsxSorted(
    "div",
    null,
    null,
    data.value.map((item) =>
      /*#__PURE__*/ _jsxSorted(
        "p",
        {
          "q-e:click": Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX,
          "q:p": item,
        },
        null,
        _fnSignal(_hf0, [item], _hf0_str),
        0,
        "u6_0",
      ),
    ),
    1,
    "u6_1",
  );
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;mBAQ0D,GAAK,KAAK,CAAC,EAAE;;;yDAL5C,SAAU,KAAK;IACtC,MAAM,OAAO,MAAM,IAAI;;IACvB,qBACE,WAAC,mBACE,KAAK,KAAK,CAAC,GAAG,CAAC,CAAC,qBACf,WAAC;YAAE,WAAQ;mBADI;;;;AAKvB"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_Inner_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_Inner_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_Inner_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    177,
    398
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX.js (ENTRY POINT)==
export const Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX = (_, _1, item) =>
  console.log(item.value.id);

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"yEAQuB,QADE,OACI,QAAQ,GAAG,CAAC,KAAK,KAAK,CAAC,EAAE"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_Inner_component_div_p_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_Inner_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    309,
    341
  ],
  "paramNames": [
    "_",
    "_",
    "item"
  ]
}
*/
== DIAGNOSTICS ==

[]
