crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_transform_qrls_in_ternary_expression.snap
---
source: src/test.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
  const enabled = useSignal(false);
  const input = useSignal("");

  return (
    <input
      id="input"
      onInput$={
        enabled.value
          ? $((ev, el) => {
              input.value = el.value;
            })
          : undefined
      }
      onFocus$={() => {
        enabled.value = true;
      }}
    />
  );
});

============================= test.tsx_FieldInput_component_input_q_e_focus_Sgf3MDWzexI.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
export const FieldInput_component_input_q_e_focus_Sgf3MDWzexI = ()=>{
    const enabled = _captures[0];
    enabled.value = true;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";gEAgBgB;;IACR,QAAQ,KAAK,GAAG\"}")
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_q_e_focus_Sgf3MDWzexI",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_q_e_focus",
  "hash": "Sgf3MDWzexI",
  "canonicalFilename": "test.tsx_FieldInput_component_input_q_e_focus_Sgf3MDWzexI",
  "path": "",
  "extension": "js",
  "parent": "FieldInput_component_V4XAtJSTRKg",
  "ctxKind": "eventHandler",
  "ctxName": "onFocus$",
  "captures": true,
  "loc": [
    379,
    424
  ],
  "captureNames": [
    "enabled"
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_V4XAtJSTRKg = ()=>import("./test.tsx_FieldInput_component_V4XAtJSTRKg");
export const FieldInput = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_V4XAtJSTRKg, "FieldInput_component_V4XAtJSTRKg"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AAEA,OAAO,MAAM,2BAAa,mFAmBvB\"}")
============================= test.tsx_FieldInput_component_V4XAtJSTRKg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_Sgf3MDWzexI = ()=>import("./test.tsx_FieldInput_component_input_q_e_focus_Sgf3MDWzexI");
const i_wqR1xEjZjf4 = ()=>import("./test.tsx_FieldInput_component_input_q_e_input_wqR1xEjZjf4");
export const FieldInput_component_V4XAtJSTRKg = ()=>{
    const enabled = useSignal(false);
    const input = useSignal("");
    return /*#__PURE__*/ _jsxSorted("input", {
        "q-e:input": enabled.value ? /*#__PURE__*/ qrl(i_wqR1xEjZjf4, "FieldInput_component_input_q_e_input_wqR1xEjZjf4", [
            input
        ]) : undefined
    }, {
        id: "input",
        "q-e:focus": /*#__PURE__*/ qrl(i_Sgf3MDWzexI, "FieldInput_component_input_q_e_focus_Sgf3MDWzexI", [
            enabled
        ])
    }, null, 2, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;gDAEqC;IACnC,MAAM,UAAU,UAAU;IAC1B,MAAM,QAAQ,UAAU;IAExB,qBACE,WAAC;qBAGG,QAAQ,KAAK;;aAIT;;QANN,IAAG;QAQH,WAAQ;;;;AAKd\"}")
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_V4XAtJSTRKg",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "V4XAtJSTRKg",
  "canonicalFilename": "test.tsx_FieldInput_component_V4XAtJSTRKg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    98,
    439
  ]
}
*/
============================= test.tsx_FieldInput_component_input_q_e_input_wqR1xEjZjf4.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
export const FieldInput_component_input_q_e_input_wqR1xEjZjf4 = (ev, el)=>{
    const input = _captures[0];
    input.value = el.value;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";gEAWc,CAAC,IAAI;;IACL,MAAM,KAAK,GAAG,GAAG,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_q_e_input_wqR1xEjZjf4",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_q_e_input",
  "hash": "wqR1xEjZjf4",
  "canonicalFilename": "test.tsx_FieldInput_component_input_q_e_input_wqR1xEjZjf4",
  "path": "",
  "extension": "js",
  "parent": "FieldInput_component_V4XAtJSTRKg",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    266,
    331
  ],
  "paramNames": [
    "ev",
    "el"
  ],
  "captureNames": [
    "input"
  ]
}
*/
== DIAGNOSTICS ==

[]
